Add footer to dht3:page.  Update footer to new suggested format.
Add Music Radar control to account page.

Small fixes to facebook block.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -53,6 +53,11 @@ input.dh-text-input {
 	text-align:		right;
 }
 
+#dhPageFooter {
+	clear:			both;
+	margin-top:		10px;
+}
+
 #dhWebServices {
 	text-align:		center;
 }
