--- a/dumbhippo/trunk/server/web/css2/site.css
+++ b/dumbhippo/trunk/server/web/css2/site.css
@@ -102,11 +102,10 @@ img {
 	-moz-border-radius:	5px;	
 }
 
-#dhPageFooter {
+.dh-page-footer-text {
 	font-size:			12px;
 	color:				#666666;
 }
-
 
 #dhSearchBox {
 	font-size:			14px;
