Add tip with /download, /invitations link to overview page.

--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -50,6 +50,15 @@ img {
 	font-weight:		bold;
 }
 
+.dh-page-options-tip-area {
+	font-size:			12px;
+	font-weight:		normal;
+}
+
+.dh-page-options-tip-link {
+	text-decoration:	underline;
+}
+
 .dh-page-footer-text {
 	font-size:			12px;
 	color:				#666666;
