Add distribution detection to BrowserBean. On /download, conditionalize in various ways on platform to try and provide the needed info; should be fine for now though the design needs some rethinking.

--- a/dumbhippo/trunk/server/web/css3/download-positions.css
+++ b/dumbhippo/trunk/server/web/css3/download-positions.css
@@ -16,6 +16,10 @@
 	margin-right:			10px;
 }
 
+.dh-download-yadayada {
+	margin-bottom:			5px;
+}
+
 .dh-download-subheader {
 	margin-bottom:			5px;
 }
