--- a/dumbhippo/trunk/server/web/css3/download.css
+++ b/dumbhippo/trunk/server/web/css3/download.css
@@ -15,6 +15,10 @@
 	font-size:		16px;	
 }
 
+.dh-download-yadayada {
+	font-size:		16px;	
+}
+
 .dh-download-subheader {
 	font-size:			18px;
 	font-weight:		bold;
