Add description to stack headers.

--- a/dumbhippo/trunk/server/web/css3/person-positions.css
+++ b/dumbhippo/trunk/server/web/css3/person-positions.css
@@ -8,6 +8,10 @@ div.dh-person-header {
     padding-top:	8px;
 }
 
+.dh-person-header-description {
+	margin-left:	5px;
+}
+
 .dh-person-header .dh-person-info {
     width:          100%;
 }
