Display block updates on the main page in one line.
main.js: for each displayed block update, fit all the details on the right in one line, 
         then truncate the title on the left depending on how many characters we can fit.

util.js: add truncateTextInHtmlNode() function that traverses the specified node 
         depth-first and truncates the text under that node to the specified length.

--- a/dumbhippo/trunk/server/web/css3/main.css
+++ b/dumbhippo/trunk/server/web/css3/main.css
@@ -17,3 +17,7 @@
 .dh-header {
     font-size:      18px;
 }
+
+.dh-stacker-block-icon, .dh-stacker-block-title, .dh-stacker-block-right {
+    display:        none;
+}
