--- a/dumbhippo/trunk/server/web/css3/main-positions.css
+++ b/dumbhippo/trunk/server/web/css3/main-positions.css
@@ -5,15 +5,30 @@
 }
 
 #dhMugshotIntro {
-    position:        relative;
+}    
+    
+#dhMugshotIntro {
+    position:        relative;  
+    width:           290px; 
+    display:         block;
+    float:           left;
     margin-top:      10px;  
     margin-bottom:   10px;
     margin-left:     15px;
-    margin-right:    15px;
+    margin-right:    10px;
+}
+
+#dhMugshotExample {
+    position:        relative;
+    width:           409px;    
+    display:         block;
+    float:           right;
+    margin-top:      10px; 
+    bottom:          -18px; 
 }
 
 #dhMugshotIntro * {
-    margin-top:     10px;
+    margin-top:     20px;
 }
 
 #dhMugshotIntro .dh-intro-options {
@@ -25,21 +40,19 @@
    top:             7px;  
 }
 
-.dh-header {
-    display:        block;
-    margin-bottom:  5px;
-    margin-top:     5px;
-}
-
 .dh-main-people {
     width:              49%;
     float:              left;
-    clear:              left;
 }
 
 .dh-main-groups {
     width:              49%;
     float:              right;
-    clear:              right;
     text-align:         left;
 }
+
+.dh-header {
+    margin-bottom:  5px;
+    margin-top:     5px;
+}
+
