Add features page.
Make /bookmark redirect to /links-learnmore.

--- a/dumbhippo/trunk/server/web/css3/download-positions.css
+++ b/dumbhippo/trunk/server/web/css3/download-positions.css
@@ -12,7 +12,7 @@
 	margin-bottom:			10px;
 }
 
-.dh-download-buttons img {
+.dh-download-buttons img, .dh-download-buttons-or  {
 	margin-right:			10px;
 }
 
