--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -189,6 +189,17 @@ div.dh-async-action-link-complete {
 	font-size:			12px;
 }
 
+.dh-page-shinybox-title-large {
+	font-size:			18px;
+	font-weight:		bold;
+	color:				#9648BC;
+}
+
+.dh-page-shinybox-subtitle-bold {
+	font-size:			16px;
+	font-weight:		bold;
+}
+
 .dh-shiny-box {
 	background: #FFFFFF url("/images3/shinybox_left.png") top left repeat-y;
 }
