New sample mugshots that fade out towards the bottom for the main page, float them left.

--- a/dumbhippo/trunk/server/web/css3/main-positions.css
+++ b/dumbhippo/trunk/server/web/css3/main-positions.css
@@ -20,11 +20,11 @@
 
 #dhMugshotExample {
     position:        relative;
-    width:           409px;    
+    width:           406px;    
     display:         block;
-    float:           right;
-    margin-top:      10px; 
-    bottom:          -18px; 
+    float:           left;
+    margin-bottom:   10px; 
+    bottom:          -19px; 
 }
 
 #dhMugshotIntro * {
