learn-more pages:  - add margin on top  - use dh:png tag for the icons  - fix up some links
features page:
 - alternate background color for the boxes
 - add invite envelope icon

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -420,3 +420,15 @@ div.dh-notification {
 .dh-person-header-next-to-image .dh-favicons {
     margin-top:     5px;
 }
+
+.dh-download-header-area {
+    margin-top:     5px;
+}
+
+.dh-download-buttons {
+	margin-bottom:			10px;
+}
+
+.dh-download-buttons img, .dh-download-buttons-or {
+	margin-right:			10px;
+}
