Always offer links to active people and groups in the top header.
Move the Log out link over to the bottom of the top header.

Have the person's name in front of Home | Friends | Groups options.

Disable the Friends link if you are not the person's friend and 
therefore can't see their friends.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -56,14 +56,19 @@ input.dh-text-input {
 
 .dh-page-options-tip-area {
     position:      relative;
+    display:       block;
+    float:         right;
+    clear:         both;
     top:           -13px;
 }
 
 .dh-page-options-options-area {
-    position:      absolute;
-    top:           5px;
-	right:         0px;
-	width:         200px;   
+    position:      relative;
+    display:       block;
+    float:         right;
+    clear:         right;
+    top:           -10px;
+	right:         0px; 
 }
 
 #dhPageFooter {
