--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -50,6 +50,10 @@ img {
 	font-weight:		bold;
 }
 
+.dh-page-option-disabled {
+    color:              #555555;
+}
+
 .dh-page-options-tip-area {
 	font-size:			12px;
 	font-weight:		normal;
