Add a special stylesheet for linux firefox to keep the person header div more compact on the main page.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -427,8 +427,28 @@ div.dh-notification {
     margin-top:         30px;
 }
 
+.dh-person-header-next-to-image {
+	margin-left:	10px;
+}
+
+div.dh-person-header {
+    padding-top:	8px;
+}
+
+.dh-person-header-description {
+	margin-left:	5px;
+}
+
+.dh-person-header .dh-person-info {
+    width:          100%;
+}
+
 .dh-person-header-next-to-image .dh-favicons {
-    margin-top:     5px;
+    padding-top:     5px;
+}
+
+.dh-person-header-stats {
+    padding-top:     1px;
 }
 
 .dh-download-header-area {
