fix some css syntax errors

--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -286,7 +286,7 @@ div.dh-async-action-link-complete {
 
 .dh-shiny-box-from {
 	font-size:				14px;
-	font-weight:			italic;
+	font-style:				italic;
 	color:					#666666;	
 }
 
