--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -268,6 +268,12 @@ div.dh-notification {
 .dh-stacker-block {
 }
 
+.dh-stacker-block-mouse-tip {
+	display:			none;
+	position:			absolute;
+	z-index:			2;
+}
+
 .dh-stacker-block-title {
 }
 
