--- a/dumbhippo/trunk/server/web/css2/upgrade.css
+++ b/dumbhippo/trunk/server/web/css2/upgrade.css
@@ -4,3 +4,15 @@
 .dh-gray-hr {
 	color: #999999;
 }
+
+.dh-upgrade-message {
+	background-color:	#ffffcc;
+	border:				1px solid #cc0033;
+	-moz-border-radius:	5px;
+	font-size:			12px;
+}
+
+.dh-upgrade-message .dh-command {
+	font-family: monospace;
+	margin:	10px;
+}
