-- do not align block content vertically at the top -- include block icon inside a table data, so that we do not mix percentage width and fixed width -- include javascript modules where they are being used in blockDescription.tag and blockContainer.tag -- fix javascript includes in main.jsp -- fix main.js to work with the new block dom structure
known issue: block title drops underneath the block icon in IE if the title is longer
than one line

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -277,16 +277,17 @@ div.dh-notification {
 }
 
 .dh-stacker-block-left {
-	margin-top:			5px;
-	margin-left:		5px;
+    float:              left;
+	margin:			    5px;
 }
-
+ 
 .dh-stacker-block-bottom-padding {
 	font-size:			4px;
 	height:				4px;
 }
 
 .dh-stacker-block-icon {
+    float:              left;
 	margin:				5px;
 }
 
@@ -311,10 +312,6 @@ div.dh-notification {
 .dh-stacker-block-right {
 	text-align:			right;
 	margin-right:		5px;
-}
-
-.dh-stacker-block-right-container {
-	width:				25%;
 }
 
 .dh-stacker-block-right-container-inner {
