--- a/dumbhippo/trunk/server/web/css3/main.css
+++ b/dumbhippo/trunk/server/web/css3/main.css
@@ -18,6 +18,6 @@
     color:          #9648CD;  
 }
 
-.dh-stacker-block-icon, .dh-stacker-block-title, .dh-stacker-block-right {
+.dh-stacker-block-icon, .dh-stacker-block-title, .dh-stacker-block-right-container-inner {
     display:        none;
 }
