Vertically align block content at the top of the block again. Make block icon and title form a table row in an inner table, so that they always line up next to each other.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -277,8 +277,10 @@ div.dh-notification {
 }
 
 .dh-stacker-block-left {
-    float:              left;
-	margin:			    5px;
+	margin-top:			5px;
+	margin-bottom:		5px;
+	margin-right:		5px;
+	margin-left:		3px;
 }
  
 .dh-stacker-block-bottom-padding {
@@ -287,8 +289,7 @@ div.dh-notification {
 }
 
 .dh-stacker-block-icon {
-    float:              left;
-	margin:				5px;
+	margin:	            5px;
 }
 
 .dh-stacker-block p	{
