statistics.js statistics/{selector,fetcher,block/chart}.js  statistics.css statistics-positions.css statistics.jsp: Dust  off the hour selector, hook it up to control the range of  times displayed.
HttpMethodsBean: Return the total statistics range with the return 
 from getStatistics()

RowStore StatisticsSet StatisticsWriter: Fix some off-by-ones in
 calculating iterator extents and iterating.

dojo/src/event.js: Fix a runtime dependency check to work right
 with our module handling.

--- a/dumbhippo/trunk/server/web/css2/statistics.css
+++ b/dumbhippo/trunk/server/web/css2/statistics.css
@@ -23,6 +23,7 @@ body { font-family: sans-serif; }
 #dhHourSelector .dh-hour {
 	border: 1px solid #666666; 
 	padding: 2px; 
+	cursor: default;
 }
 	
 #dhHourSelector .dh-normal-hour { 
