Make the refresh button position: fixed the same as the hour selector; having one scroll off the top but not the other was just weird.

--- a/dumbhippo/trunk/server/web/css2/statistics-positions.css
+++ b/dumbhippo/trunk/server/web/css2/statistics-positions.css
@@ -4,6 +4,12 @@
 	 left: 775px; 
 }
 
+#dhRefreshDiv {
+	position: fixed;
+	top: 10px;
+	right: 10px;
+}
+
 .dh-block-table {
 	table-layout: fixed;
 	border-spacing: 0px;
