* Rework BlockView construction so we can create a BlockView either for   UserBlockData or for GroupBlockData. * Remove a bunch of unused BlockView constructors. * Add BlockView.getStackReason() * Show the stack reason on the web page for blocks that are restacked   because of viewer_count.

--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -375,6 +375,11 @@ div.dh-async-action-link-complete {
 	font-size:			12px;
 }
 
+.dh-stacker-stack-reason {
+	font-size:			11px;
+	font-style:			italic;
+}
+
 .dh-stacker-block-content {
 	font-size:			12px;
 	display:			none;
