Fix width on thumbnail titles.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -504,6 +504,7 @@ div.dh-person-header {
 	float:				left;
 	margin-right:		20px;
 	padding:			0px;
+	overflow:			hidden;
 }
 
 .dh-thumbnail-block-thumb img {
