Show a lock on facebook blocks.
Swap in the new facebook favicon.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -282,6 +282,11 @@ div.dh-notification {
 	margin-left:		3px;
 }
  
+ .dh-stacker-block-title-image {
+    position:           relative;
+    top:                1px;    
+ }
+ 
 .dh-stacker-block-bottom-padding {
 	font-size:			4px;
 	height:				4px;
