Add learn-more page for external web accounts.

--- a/dumbhippo/trunk/server/web/css3/download.css
+++ b/dumbhippo/trunk/server/web/css3/download.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 @IMPORT url("download-positions.css");
 
-.dh-download-header {
+.dh-download-header, .dh-learnmore-header {
 	color:				#9648BC;
 	font-weight:  		bold;
 	font-size:	  		18px;
