--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -455,3 +455,10 @@ div.dh-async-action-link-complete {
 	font-weight:        bold;
 }
 
+.dh-learnmore-section {
+	font-size:          13px;
+}
+
+.dh-learnmore-summary {
+	font-weight:        bold;
+}
