Add a tag with sign up/log in buttons or the download button to all learn-more pages.
Move download-related methods from DownloadPage into DownloadBean, which
inherits from BrowserBean.

Add dates for latest Linux and Windows clients to base.conf

Swap in the new Stacker icon.

--- a/dumbhippo/trunk/server/web/css3/site-iefixes.css
+++ b/dumbhippo/trunk/server/web/css3/site-iefixes.css
@@ -10,3 +10,9 @@
 
 .dh-stacker-block-content-container {
 }
+
+/* heigth: 1% is a hack to have "layout" forced on the text container for IE6, picked up on
+   http://www.pmob.co.uk/pob/caption-clear.htm */
+.dh-learnmore-explanation {
+    height:        1%;
+}
