Add some simple feedback while we are loading friends and groups information. (In conjection with the recent performance fix hopefully resolves #786)

--- a/dumbhippo/trunk/server/web/css/sharelink.css
+++ b/dumbhippo/trunk/server/web/css/sharelink.css
@@ -139,6 +139,12 @@ table, tr, td {
   margin: 0px 0px;
 }
 
+#dhShareRecipientsLoading {
+  font-size: 12px;
+  font-style: italic;
+  color: #666666;
+}
+
 #dhShareRecipientsBox {
   table-layout: fixed;
   margin: 0px;
