Get /badges working for logged-in case, turned out to be mostly an exercise in working around IE oddities

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -130,7 +130,8 @@ input.dh-text-input {
 
 .dh-nowplaying {
 	width:				440px;
-	height:				120px;
+	/* when the badge has a label, this is wrong. */
+	/* height:				120px; */
 }
 
 .dh-grow-div-around-floats {
