Remove width: 100% from the shiny-box divs. It's not needed there and was causing IE to hang for seconds (#1016)

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -245,7 +245,7 @@ div.dh-notification {
 	display:            block;
 }
 
-.dh-shiny-box .dh-shiny-box-box {
+.dh-shiny-box-spacer-table {
     width:              100%;
 }
 
