A new coat of paint for the account page.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -236,7 +236,12 @@ div.dh-notification {
 	position:			relative;
 }
 
-.dh-page-shinybox-title-large, .dh-page-shinybox-subtitle-bold  {
+.dh-page-shinybox-title-large  {
+	margin-bottom:		5px;
+}
+
+.dh-page-shinybox-subtitle  {
+    margin-top:         10px;
 	margin-bottom:		5px;
 }
 
