include photo chooser css on new account page

--- a/dumbhippo/trunk/server/web/css3/account.css
+++ b/dumbhippo/trunk/server/web/css3/account.css
@@ -1,5 +1,6 @@
 @CHARSET "UTF-8";
 @IMPORT url("account-positions.css");
+@IMPORT url("photo-chooser.css");
 
 #dhAccountInfoForm, #dhAccounts {
     font-size:  13px;
