Use a new Facebook API method to get the wall message count; the old one was disabled today.
Add a little style to the note displayed when someone logs in 
to Facebook through their account page.

--- a/dumbhippo/trunk/server/web/css3/account.css
+++ b/dumbhippo/trunk/server/web/css3/account.css
@@ -46,3 +46,10 @@
 .dh-love-hate {
 	font-size:		inherit;
 }
+
+#dhTermsOfUseNote, #dhFacebookNote {
+	background-color:	#ffffcc;
+	color:				#cc0033;
+	font-size:          12px;
+	font-weight:		bold;
+}
