--- a/dumbhippo/trunk/server/web/css3/account-positions.css
+++ b/dumbhippo/trunk/server/web/css3/account-positions.css
@@ -22,6 +22,10 @@
 	width:          90px;
 }
 
+#dhAccounts .dh-control-cell-next-to-info {
+    width:          320px;
+}
+
 #dhAccounts .dh-info-cell {
 	padding-left:	5px;
 	text-align:     left;
