adding more feature adverts to the random tips, should work on preventing them from showing up on the page they are referring to

--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -67,6 +67,10 @@ a.dh-underlined-link-visited:link, a.dh-underlined-link-visited:hover, a.dh-unde
 	text-decoration:	underline;
 }
 
+.dh-page-options-tip-link:visited {
+	color:			#0000ff;
+}
+
 .dh-page-footer-text {
 	font-size:			12px;
 	color:				#666666;
