--- a/dumbhippo/trunk/server/web/css3/account-positions.css
+++ b/dumbhippo/trunk/server/web/css3/account-positions.css
@@ -77,13 +77,56 @@ div.dh-notification {
 .dh-form-table .dh-next-to-image {
     margin-left:    10px;
 	float:			left;
-	width:			273px;
 	vertical-align: top;
 }
 
-.dh-form-table #dhPictureEntry {
-	width:			273px;
+.dh-picture-instructions {
+    position:   relative;
+    float:      left;
+    margin-top: 4px;
+    height:     20px;
+}
+
+.dh-picture-more-instructions {
+    position:     relative;
+    float:        left;
+    margin-top:   4px;
+    clear:        left;
+}
+
+#dhPictureForm {
+    position:  relative;
+    float:     left;
+}
+
+#dhPictureEntry, .dh-file-upload-think {
 	margin-top:     2px;
+}
+
+.dh-file-upload, .dh-file-upload-think {
+	position:       relative;
+	left:           3px;	
+}
+
+/* setting width to 0 works for IE, but not for Firefox,
+   best we can do in Firefox for shrinking the input field
+   is setting size=1; then we need to move the hidden browse 
+   input box over to the left to have the actual browse 
+   button show up right next to dh-picture-instructions */ 
+.dh-hidden-file-upload {
+	position:       relative;
+    left:           -28px;
+	-moz-opacity:   0;
+	filter:alpha(opacity: 0);
+	opacity:        0;
+	z-index:        2;	
+}
+
+.dh-styled-file-upload, .dh-styled-file-upload-think {
+	position:       absolute;
+	top:            2px;
+	left:           3px;
+	z-index:        1;
 }
 
 /* Position this so the stock photo popup is relative to it */
@@ -156,3 +199,4 @@ tr.dh-email-address-spacer {
     position:      relative;
     bottom:        -4px;
 }
+
